tests/baselines/reference/privateNameStaticFieldInitializer(strict=true,target=es2022).errors.txt
privateNameStaticFieldInitializer.ts(3,12): error TS7008: Member '#uninitialized' implicitly has an 'any' type.


==== privateNameStaticFieldInitializer.ts (1 errors) ====
    class A {
        static #field = 10;
        static #uninitialized;
               ~~~~~~~~~~~~~~
!!! error TS7008: Member '#uninitialized' implicitly has an 'any' type.
    }
    